deployments/pathweb/esphome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esphome
spec:
  selector: {}
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        k8s.v1.cni.cncf.io/networks: home-network/esphome-iot-network
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: esphome
        image: esphome/esphome
        args:
          - "dashboard"
          - "/config"
          - "--address"
          - "$(POD_IP)"
          - "--port"
          - "6052"
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 6052
          name: http
        volumeMounts:
          - mountPath: /config
            name: data
          - mountPath: /.platformio
            name: temp
            subPath: .platformio
          - mountPath: /piolibs
            name: temp
            subPath: piolibs
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: esphome-data
        - name: temp
          emptyDir: {}
