deployments/pathweb/esphome/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: esphome
  labels:
    external-dns: local-pdns
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: home-network-ak-outpost-authentik-embedded-outpost@kubernetescrd
spec:
  ingressClassName: traefik-traefik
  rules:
  - host: esphome.services.home.yrf.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: esphome
            port:
              name: http
  tls:
  - hosts:
    - esphome.services.home.yrf.me
    secretName: services-wildcard-cert
